Functionality added for pulling data from JSON files and programmatically creating HTML elements using fetch API. Issue with all data past 'directions' not showing. Feature to change quantities based on serving size still needing built

--- a/style.css
+++ b/style.css
@@ -19,7 +19,7 @@ h3 { font-size: 28px; }
 h4 { font-size: 24px; }
 h5 { font-size: 18px; }
 h6 { font-size: 18px; }
-p {font-size: 24px;}
+p {font-size: 14px;}
 
 /* site-wide */
 
@@ -81,4 +81,14 @@ input {
 
 .recipe-card {
     border: 2px solid red;
+}
+
+.hide {
+    display: none;
+}
+
+/* Recipe Info */
+
+.ingListItem {
+    margin: 25px auto;
 }
